--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- 🔹 Social Media Icons -->
     <div class="text-center mb-6">
-        <h2 class="text-lg font-semibold text-gray-700">Follow Us</h2>
+        <h2 class="text-lg font-semibold text-gray-700"></h2>
         <div class="flex justify-center space-x-4 mt-2">
             <a href="https://www.tiktok.com" target="_blank">
                 <img src="IMG_3298.png" alt="TikTok" class="w-8">
