--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 <body class="bg-gray-100">
 
     <!-- 🔹 Header -->
+    <!-- 🔹 Header -->
     <div class="header-container">
         <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
     </div>
-    
-    <!-- 🔹 Payment Methods Image -->
-      <!-- 🔹 Payment Methods Image -->
-        <!-- 🔹 Payment Methods Image -->
+
+<!-- 🔹 Bottom Navigation Bar -->
+    <div class="bottom-nav">
+        <a href="#product-features">Product Features</a>
+        <a href="#payment-options">Payment Options</a>
+        <a href="#product-reviews">Product Reviews</a>
+        <a href="#contact-us">Contact Us</a>
+    </div>
+
+<!-- 🔹 Payment Methods Image -->
     <div class="payment-bar">
         <img src="IMG_3319.png" alt="Payment Methods">
     </div>
-
 
     <!-- 🔹 Social Media Icons -->
     <div class="text-center mb-6">
