--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     <!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal وإرسال إشعار تيليجرام -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN";
-            const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID";
-            const basePrice = 10.00;
+            const TELEGRAM_BOT_TOKEN = "6961886563:AAHZwl-UaAWaGgXwzyp1vazRu1Hf37FKX2A";
+            const TELEGRAM_CHAT_ID = "-1002290156309";
+            const basePrice = 0.5.00;
             const quantitySelect = document.getElementById("quantity");
             const totalPriceElement = document.getElementById("total-price");
 
