--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- 🔹 تحميل PayPal SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id=AZsqOV7PNElXMoKK4b-Z0CVgd9ymky6qwNMynhX3a2PyJj7i97tH2g8HXlmGsuCwo3QcChAQxYrtcuds&components=buttons"></script>
 
-    <!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal وإرسال إشعار تيليجرام -->
+    <!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal وإرسال إشعار تيليجرام --->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const TELEGRAM_BOT_TOKEN = "6961886563:AAHZwl-UaAWaGgXwzyp1vazRu1Hf37FKX2A";
