--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
             <h2 class="text-3xl font-bold text-gray-900 mb-6">💎 Our Featured Products</h2>
 
                 <div class="product-card">
-                   <video controls class="product-video">
-                   <source src="1.MP4" type="video/mp4">
+                    <video controls class="product-video" poster="images/thumbnail.jpg">
+                    <source src="videos/demo.mp4" type="video/mp4">
                      Your browser does not support the video tag.
-                   </video>
-                   <h3>🧼 Glass Nano Coating Applicator</h3>
-                   <p>This innovative nano-coating applicator removes dirt, repels water, and enhances visibility, keeping your car’s glass spotless in any weather.</p>
+                    </video>
+                    <h3>🧼 Glass Nano Coating Applicator</h3>
+                    <p>This innovative nano-coating applicator removes dirt, repels water, and enhances visibility, keeping your car’s glass spotless in any weather.</p>
                 </div> 
                 <div class="product-card">
                     <img src="IMG_3098.jpeg" alt="Product 2">
