--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="text-3xl font-bold text-gray-900 mb-6">💎 Our Featured Products</h2>
 
                 <div class="product-card">
-                    <video controls class="product-video" poster="images/thumbnail.jpg">
+                    <video controls class="product-video" poster="IMG_3333.jpeg">
                     <source src="videos/demo.mp4" type="video/mp4">
                      Your browser does not support the video tag.
                     </video>
