--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="product-card">
                     <video controls class="product-video" poster="IMG_3333.jpeg">
-                    <source src="videos/demo.mp4" type="video/mp4">
+                    <source src="1.mp4" type="video/mp4">
                      Your browser does not support the video tag.
                     </video>
                     <h3>🧼 Glass Nano Coating Applicator</h3>
