--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
             renderPayPalButton();
         });
     </script>
+    <a href="shipping.html" class="fixed bottom-16 right-4 bg-blue-500 text-white p-3 rounded-full shadow-lg">
+    📦 Shipping Info
+    </a>
          <!-- Link JavaScript File -->
     <script src="script.js"></script>
 </body>
