--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
             renderPayPalButton();
         });
     </script>
-    <a href="shipping.html" class="fixed bottom-16 right-4 bg-blue-500 text-white p-3 rounded-full shadow-lg">
+    <!-- 🔹 زر الشحن العائم -->
+    <a href="shipping.html" class="floating-shipping-button">
     📦 Shipping Info
     </a>
          <!-- Link JavaScript File -->
