--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
+    <!-- 🔹 Header -->
+    <!-- 🔹 Header -->
+    <div class="header-container">
+        <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
+    </div>
 
 
 
@@ -19,10 +24,7 @@
         <a href="#contact-us">Contact Us</a>
     </div>
 
-<!-- 🔹 Payment Methods Image -->
-    <div class="payment-bar">
-        <img src="IMG_3319.png" alt="Payment Methods">
-    </div>
+
 
     <!-- 🔹 Social Media Icons -->
     <div class="text-center mb-6">
