--- a/index.html
+++ b/index.html
@@ -167,7 +167,26 @@
     <a href="shipping.html" class="floating-shipping-button">
     📦 Shipping Info
     </a>
+    <!-- 🔹 Social Media Icons -->
+    <div class="text-center mb-6">
+        <h2 class="text-lg font-semibold text-gray-700"></h2>
+        <div class="flex justify-center space-x-4 mt-2">
+            <a href="https://www.tiktok.com" target="_blank">
+                <img src="IMG_3298.png" alt="TikTok" class="w-8">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="w-8">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" class="w-8">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="IMG_3299.jpeg" alt="X" class="w-8">
+            </a>
+        </div>
+    </div>
          <!-- Link JavaScript File -->
     <script src="script.js"></script>
+    
 </body>
 </html>
