--- a/index.html
+++ b/index.html
@@ -100,6 +100,66 @@
 
     <!-- 🔹 JavaScript -->
     <script src="script.js"></script>
+     <!-- 🔹 تحميل PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID&components=buttons"></script>
 
+<!-- 🔹 تهيئة زر الدفع عبر PayPal -->
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const basePrice = 1.00;
+        const quantitySelect = document.getElementById("quantity");
+        const totalPriceElement = document.getElementById("total-price");
+
+        function updatePrice() {
+            const quantity = parseInt(quantitySelect.value);
+            const totalPrice = basePrice * quantity;
+            totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
+            return totalPrice.toFixed(2);
+        }
+
+        quantitySelect.addEventListener("change", function () {
+            updatePrice();
+            renderPayPalButton();
+        });
+
+        function renderPayPalButton() {
+            document.getElementById("paypal-button-container").innerHTML = "";
+            paypal.Buttons({
+                createOrder: function (data, actions) {
+                    return actions.order.create({
+                        purchase_units: [{
+                            amount: { value: updatePrice() }
+                        }]
+                    });
+                },
+                onApprove: function (data, actions) {
+                    return actions.order.capture().then(function (details) {
+                        alert("✅ Payment successful via PayPal!");
+
+                        // 🔹 إرسال البيانات إلى تيليجرام
+                        let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                      `📧 *Email:* ${details.payer.email_address}\n` +
+                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                        fetch(`https://api.telegram.org/botYOUR_TELEGRAM_BOT_TOKEN/sendMessage`, {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({
+                                chat_id: "YOUR_TELEGRAM_CHAT_ID",
+                                text: message,
+                                parse_mode: "Markdown"
+                            })
+                        }).catch(error => console.error("Telegram API error:", error));
+                    });
+                }
+            }).render("#paypal-button-container");
+        }
+
+        updatePrice();
+        renderPayPalButton();
+    });
+  </script>
 </body>
 </html>
