--- a/index.html
+++ b/index.html
@@ -161,5 +161,12 @@
         renderPayPalButton();
     });
   </script>
+      <!-- 🔹 Social Media Icons -->
+    <div class="social-icons-container">
+        <a href="https://www.tiktok.com" target="_blank"><img src="IMG_3298.png" alt="TikTok"></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook"></a>
+        <a href="https://twitter.com" target="_blank"><img src="IMG_3299.jpeg" alt="X"></a>
+    </div
 </body>
 </html>
