--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
     <!-- 🔹 JavaScript -->
     <script src="script.js"></script>
      <!-- 🔹 تحميل PayPal SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID&components=buttons"></script>
+<!-- 🔹 PayPal SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
 
-<!-- 🔹 تهيئة زر الدفع عبر PayPal -->
+<!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal -->
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const basePrice = 1.00;
@@ -134,12 +135,12 @@
                 },
                 onApprove: function (data, actions) {
                     return actions.order.capture().then(function (details) {
-                        let orderID = details.id; // رقم الطلب من PayPal
+                        let orderID = details.id;
                         alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
-                    });
-                 }
+
                         // 🔹 إرسال البيانات إلى تيليجرام
                         let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                      `🆔 *Order ID:* ${details.id}\n` +
                                       `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
                                       `📧 *Email:* ${details.payer.email_address}\n` +
                                       `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
@@ -162,6 +163,7 @@
         updatePrice();
         renderPayPalButton();
     });
+  </script>
   </script><!-- 🔹 Social Media Icons -->
       <div class="social-icons-container">
           <a href="https://www.tiktok.com" target="_blank"><img src="IMG_3298.png" alt="TikTok"></a>
