--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <li><a href="#contact-us">Contact Us</a></li>
         </ul>
     </nav>
-        <!-- 🔹 Promo Banner -->
-    <div class="promo-banner">
-         <p>🚀 Free Shipping on All Orders Over $50! Limited Time Offer! 🛍️</p>
-    </div>
+        
+    <!-- 🔹 Live Notification Bar -->
+     <div class="notification-bar">
+         <p id="notification-text">🚀 New Orders Are Being Placed Right Now!</p>
+     </div>
 
     <!-- 🔹 Product Showcase -->
     <section class="py-8 bg-gray-100 text-center">
