--- a/index.html
+++ b/index.html
@@ -89,8 +89,24 @@
             <div id="paypal-button-container" class="mt-4"></div>
         </div>
     </section>
+    <!-- 🔹 Trust Bar -->
+<div class="trust-bar">
+    <div class="trust-item">
+        <img src="secure-payment.png" alt="Secure Payment">
+        <p>Secure Payment</p>
+    </div>
+    <div class="trust-item">
+        <img src="fast-shipping.png" alt="Fast Shipping">
+        <p>Fast Shipping</p>
+    </div>
+    <div class="trust-item">
+        <img src="money-back.png" alt="Money Back Guarantee">
+        <p>Money-Back Guarantee</p>
+    </div>
+</div>
 
     <!-- 🔹 Footer -->
+    
     <footer class="bg-gray-100 text-center text-sm text-gray-600 py-4 mt-6">
         <div class="container mx-auto">
             <p class="mt-2">© 2025 All rights reserved.</p>
