--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
     <!-- 🔹 Trust Bar -->
     <div class="trust-bar">
        <div class="trust-item">
-           <img src="secure-payment.png" alt="Secure Payment">
+           <img src="IMG_3345.jpeg" alt="Secure Payment">
            <p>Secure Payment</p>
        </div>
        <div class="trust-item">
-           <img src="fast-shipping.png" alt="Fast Shipping">
+           <img src="IMG_3347.png" alt="Fast Shipping">
            <p>Fast Shipping</p>
        </div>
        <div class="trust-item">
-           <img src="money-back.png" alt="Money Back Guarantee">
+           <img src="IMG_3349.jpeg" alt="Money Back Guarantee">
            <p>Money-Back Guarantee</p>
        </div>
     </div>
