--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     </div>
 
     <!-- 🔹 Improved Navigation Bar -->
-    <nav class="nav-bar">
-        <ul>
-            <li><a href="#product-features">Product Features</a></li>
-            <li><a href="#payment-options">Payment Options</a></li>
-            <li><a href="#product-reviews">Product Reviews</a></li>
-            <li><a href="#contact-us">Contact Us</a></li>
-        </ul>
+    <!-- 🔹 Navigation Bar -->
+    <nav class="top-nav bg-gradient-to-r from-green-600 to-green-800 text-white py-3 shadow-md">
+        <div class="container mx-auto flex justify-around">
+            <a href="index.html" class="hover:underline font-semibold">🏠 Home</a>
+            <a href="shopping.html" class="hover:underline font-semibold">🛍️ Shopping</a>
+            <a href="#tracking-section" class="hover:underline font-semibold">📦 Track Order</a>
+            <a href="after-purchase.html" class="hover:underline font-semibold">📜 After Purchase</a>
+      </div>
     </nav>
         
     <!-- 🔹 Live Notification Bar -->
