--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
         <img src="IMG_3286.jpeg" alt="Header Image" class="header-image">
     </div>
 
-    <!-- 🔹 Improved Navigation Bar -->
-    <!-- 🔹 Navigation Bar -->
-    <nav class="top-nav bg-gradient-to-r from-green-600 to-green-800 text-white py-3 shadow-md">
-        <div class="container mx-auto flex justify-around">
-            <a href="index.html" class="hover:underline font-semibold">🏠 Home</a>
-            <a href="shopping.html" class="hover:underline font-semibold">🛍️ Shopping</a>
-            <a href="#tracking-section" class="hover:underline font-semibold">📦 Track Order</a>
-            <a href="after-purchase.html" class="hover:underline font-semibold">📜 After Purchase</a>
-      </div>
+    <!-- 🔹 Modern Navigation Bar -->
+    <nav class="top-nav">
+        <div class="container">
+        <!-- 🔹 Logo -->
+            <a href="index.html" class="logo">Brand Name</a>
+
+        <!-- 🔹 Navigation Links -->
+            <div class="nav-links">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="shopping.html" class="nav-link">Shop</a>
+                <a href="#tracking-section" class="nav-link track-link">Track Order</a>
+                <a href="after-purchase.html" class="nav-link">After Purchase</a>
+            </div>
+        </div>
     </nav>
         
     <!-- 🔹 Live Notification Bar -->
