--- a/index.html
+++ b/index.html
@@ -16,17 +16,28 @@
 
     <!-- 🔹 Modern Navigation Bar -->
     <nav class="top-nav">
-        <div class="container">
+        <div class="nav-container">
         <!-- 🔹 Logo -->
             <a href="index.html" class="logo">Brand Name</a>
 
         <!-- 🔹 Navigation Links -->
-            <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="shopping.html" class="nav-link">Shop</a>
-                <a href="#tracking-section" class="nav-link track-link">Track Order</a>
-                <a href="after-purchase.html" class="nav-link">After Purchase</a>
-            </div>
+        <div class="nav-links">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="shopping.html" class="nav-link">Shop</a>
+            <a href="#tracking-section" class="nav-link track-link">Track Order</a>
+            <a href="after-purchase.html" class="nav-link">After Purchase</a>
+        </div>
+
+        <!-- 🔹 Mobile Menu Toggle -->
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        </div>
+
+    <!-- 🔹 Mobile Navigation Menu -->
+        <div class="mobile-nav">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="shopping.html" class="nav-link">Shop</a>
+            <a href="#tracking-section" class="nav-link track-link">Track Order</a>
+            <a href="after-purchase.html" class="nav-link">After Purchase</a>
         </div>
     </nav>
         
