--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="top-nav">
         <div class="nav-container">
         <!-- 🔹 Logo -->
-            <a href="index.html" class="logo">Brand Name</a>
+            <a href="index.html" class="logo">Velyora</a>
 
         <!-- 🔹 Navigation Links -->
         <div class="nav-links">
