--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <a href="after-purchase.html" class="nav-link">After Purchase</a>
         </div>
     </nav>
+      <div class="ticker-bar">
+          <p>🔥 Limited Offer: Free shipping on orders above $50! | 💰 Money-Back Guarantee! | 🚀 Fast Delivery!</p>
+      </div>
         
     <!-- 🔹 Live Notification Bar -->
      <div class="notification-bar">
