--- a/index.html
+++ b/index.html
@@ -43,6 +43,25 @@
       <div class="ticker-bar">
           <p>🔥 Limited Offer: Free shipping on orders above $50! | 💰 Money-Back Guarantee! | 🚀 Fast Delivery!</p>
       </div>
+      <div class="quick-info">
+          <div class="badge">
+              <img src="secure-icon.png" alt="Secure">
+              <span>100% Secure Payments</span>
+          </div>
+          <div class="badge">
+              <img src="fast-delivery.png" alt="Fast Delivery">
+              <span>Fast & Reliable Shipping</span>
+          </div>
+          <div class="badge">
+              <img src="support.png" alt="Support">
+             <span>24/7 Customer Support</span>
+          </div>
+        </div>
+      <div class="quick-actions">
+          <a href="shopping.html" class="action-btn">🛒 Shop Now</a>
+          <a href="#tracking-section" class="action-btn">📦 Track Order</a>
+          <a href="after-purchase.html" class="action-btn">ℹ️ After Purchase</a>
+      </div>
         
     <!-- 🔹 Live Notification Bar -->
      <div class="notification-bar">
