--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
           <a href="#tracking-section" class="action-btn">📦 Track Order</a>
           <a href="after-purchase.html" class="action-btn">ℹ️ After Purchase</a>
       </div>
+      <div class="button-container">
+    <!-- زر Shop Now -->
+          <a href="shopping.html" class="icon-button">
+                <img src="IMG_3370.jpeg" alt="Shop Now">
+          </a>
+
+    <!-- زر Track Order -->
+          <a href="#tracking-section" class="icon-button">
+              <img src="track-order.png" alt="Track Order">
+          </a>
+       </div>
         
     <!-- 🔹 Live Notification Bar -->
      <div class="notification-bar">
