--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
       <div class="button-container">
     <!-- زر Shop Now -->
           <a href="shopping.html" class="icon-button">
-                <img src="IMG_3370.jpeg" alt="Shop Now">
+                <img src="MG_3373.png" alt="Shop Now">
           </a>
 
     <!-- زر Track Order -->
           <a href="#tracking-section" class="icon-button">
-              <img src="track-order.png" alt="Track Order">
+              <img src="MG_3372.png" alt="Track Order">
           </a>
        </div>
         
