--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
        </div>
        <div class="custom-payment-methods">
            <div class="custom-payment-item">
-               <img src="images/paypal.png" alt="PayPal">
+               <img src="images/IMG_3390.jpge" alt="PayPal">
               <span>PayPal</span>
            </div>
            <div class="custom-payment-item">
-               <img src="images/usdt.png" alt="USDT (Tether)">
+               <img src="images/IMG_3389.jpge" alt="USDT (Tether)">
                <span>USDT (Tether)</span>
            </div>
        </div>
