--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="button-container">
     <!-- زر Shop Now -->
           <a href="shopping.html" class="icon-button">
-                <img src="IMG_3373.png" alt="Shop Now">
+                <img src="IMG_3399.jpeg" alt="Shop Now">
           </a>
 
     <!-- زر Track Order -->
