--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
         <!-- 🔹 Moved "Shipping Info" Button Here -->
         <a href="shipping.html" class="bg-gray-700 text-white px-4 py-2 rounded mt-4 inline-block">📦 Shipping Info</a>
     </section>
+         <div class="custom-payment-methods">
+           <div class="custom-payment-item">
+               <img src="images/IMG_3393.png" alt="PayPal">
+              
+           </div>
+           <div class="custom-payment-item">
+               <img src="images/IMG_3405.png" alt="USDT (Tether)">
+               
+           </div>
+       </div>
 
     <!-- 🔹 Payment Section -->
     <section class="flex justify-center">
