--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
 
     <!-- 🔹 Modern Navigation Bar -->
     <nav class="top-nav">
-   <div class="nav-container">
+        <div class="nav-container">
         <!-- 🔹 Logo -->
-            <a href="index.html" class="logo">Velyora</a>
-       <div class="custom-payment-methods">
-           <div class="custom-payment-item">
-               <img src="images/IMG_3410.png" alt="PayPal">
-              
-           </div>
-           
-       </div>
-   </div>
+            <a href="index.html" class="logo">
+                <img src="images/IMG_3410.png" alt="Velyora Logo" style="height: 40px;">
+            </a>
+        </div>
 
         <!-- 🔹 Navigation Links -->
         <div class="nav-links">
