--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="index.html" class="logo">
                 <img src="images/IMG_3410.png" alt="Velyora Logo" style="height: 40px;">
             </a>
+            <a href="index.html" class="logo">Velyora</a>
         
 
         <!-- 🔹 Navigation Links -->
