--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav-container">
         <!-- 🔹 Logo -->
             <a href="index.html" class="logo">
-                <img src="images/IMG_3410.png" alt="Velyora Logo" style="height: 40px;">
+                <img src="IMG_3412.png" alt="Velyora Logo" style="height: 40px;">
             </a>
             <a href="index.html" class="logo">Velyora</a>
         
