--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
         <p id="trackingResult" class="mt-2 text-red-500"></p>
 
         <!-- 🔹 Moved "Shipping Info" Button Here -->
-        <a href="shipping.html" class="bg-gray-700 text-white px-4 py-2 rounded mt-4 inline-block">📦 Shipping Info</a>
+        <a href="shipping.html" class="custom-shipping-button">
+            <img src="images/shipping-info.png" alt="Shipping Info">
+        </a>
     </section>
          <div class="custom-payment-methods">
            <div class="custom-payment-item">
