--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!-- 🔹 Moved "Shipping Info" Button Here -->
         <a href="shipping.html" class="custom-shipping-button">
-            <img src="images/shipping-info.png" alt="Shipping Info">
+            <img src="IMG_3413.jpeg" alt="Shipping Info">
         </a>
     </section>
          <div class="custom-payment-methods">
