--- a/index.html
+++ b/index.html
@@ -159,36 +159,39 @@
     </footer>
 
     <!-- 🔹 PayPal SDK -->
-    <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
+    <!-- 🔹 PayPal SDK -->
+  <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
 
-    <!-- 🔹 JavaScript -->
-    <script src="script.js"></script>
-     <!-- 🔹 تحميل PayPal SDK -->
-<!-- 🔹 PayPal SDK -->
-    <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
+<!-- 🔹 تهيئة زر الدفع -->
+  <script>
+      document.addEventListener("DOMContentLoaded", function () {
+          const basePrice = 1.00;
+          const quantitySelect = document.getElementById("quantity");
+          const totalPriceElement = document.getElementById("total-price");
 
-<!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal -->
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const basePrice = 1.00;
-        const quantitySelect = document.getElementById("quantity");
-        const totalPriceElement = document.getElementById("total-price");
-
-        function updatePrice() {
+          function updatePrice() {
             const quantity = parseInt(quantitySelect.value);
             const totalPrice = basePrice * quantity;
             totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
             return totalPrice.toFixed(2);
-        }
+          }
 
-        quantitySelect.addEventListener("change", function () {
+          quantitySelect.addEventListener("change", function () {
             updatePrice();
-            renderPayPalButton();
-        });
+            renderPayPalButtons();
+          });
 
-        function renderPayPalButton() {
-            document.getElementById("paypal-button-container").innerHTML = "";
-            paypal.Buttons({
+          function renderPayPalButtons() {
+              document.getElementById("paypal-button-container").innerHTML = "";
+
+            // 🔹 زر PayPal الأسود (يفتح دائمًا)
+              paypal.Buttons({
+                  style: {
+                      layout: 'vertical',
+                      color: 'black', // زر أسود
+                      shape: 'rect',
+                      label: 'pay'
+                },
                 createOrder: function (data, actions) {
                     return actions.order.create({
                         purchase_units: [{
@@ -198,35 +201,37 @@
                 },
                 onApprove: function (data, actions) {
                     return actions.order.capture().then(function (details) {
-                        let orderID = details.id;
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${details.id}`);
+                    });
+                }
+            }).render("#paypal-button-container");
 
-                        // 🔹 إرسال البيانات إلى تيليجرام
-                        let message = `📢 *New Payment Received!* 🚀\n\n` +
-                                      `🆔 *Order ID:* ${details.id}\n` +
-                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
-                                      `📧 *Email:* ${details.payer.email_address}\n` +
-                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
-                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
-
-                        fetch(`https://api.telegram.org/botYOUR_TELEGRAM_BOT_TOKEN/sendMessage`, {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                chat_id: "YOUR_TELEGRAM_CHAT_ID",
-                                text: message,
-                                parse_mode: "Markdown"
-                            })
-                        }).catch(error => console.error("Telegram API error:", error));
+            // 🔹 زر PayPal الأصفر (يظهر أيضًا)
+            paypal.Buttons({
+                style: {
+                    layout: 'vertical',
+                    color: 'gold', // زر أصفر
+                    shape: 'rect',
+                    label: 'checkout'
+                },
+                createOrder: function (data, actions) {
+                    return actions.order.create({
+                        purchase_units: [{
+                            amount: { value: updatePrice() }
+                        }]
+                    });
+                },
+                onApprove: function (data, actions) {
+                    return actions.order.capture().then(function (details) {
+                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${details.id}`);
                     });
                 }
             }).render("#paypal-button-container");
         }
 
         updatePrice();
-        renderPayPalButton();
+        renderPayPalButtons();
     });
-  </script>
   </script><!-- 🔹 Social Media Icons -->
       <div class="social-icons-container">
           <a href="https://www.tiktok.com" target="_blank"><img src="IMG_3298.png" alt="TikTok"></a>
