--- a/index.html
+++ b/index.html
@@ -160,37 +160,43 @@
 
     <!-- 🔹 PayPal SDK -->
     <!-- 🔹 PayPal SDK -->
-  <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
+  <!-- 🔹 تحميل PayPal SDK -->
+ <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
 
-<!-- 🔹 تهيئة زر الدفع -->
-  <script>
-      document.addEventListener("DOMContentLoaded", function () {
-          const basePrice = 1.00;
-          const quantitySelect = document.getElementById("quantity");
-          const totalPriceElement = document.getElementById("total-price");
+<!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal -->
+ <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN"; // ✅ استبدل بتوكن البوت الحقيقي
+        const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID"; // ✅ استبدل بمعرف الشات الخاص بك
 
-          function updatePrice() {
+        const basePrice = 1.00;
+        const quantitySelect = document.getElementById("quantity");
+        const totalPriceElement = document.getElementById("total-price");
+
+        function updatePrice() {
             const quantity = parseInt(quantitySelect.value);
             const totalPrice = basePrice * quantity;
             totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
             return totalPrice.toFixed(2);
-          }
+        }
 
-          quantitySelect.addEventListener("change", function () {
+        quantitySelect.addEventListener("change", function () {
             updatePrice();
             renderPayPalButtons();
-          });
+        });
 
-          function renderPayPalButtons() {
-              document.getElementById("paypal-button-container").innerHTML = "";
+        function renderPayPalButtons() {
+            // ✅ تأكد من إزالة أي أزرار قديمة قبل إعادة الإنشاء
+            document.getElementById("paypal-button-black").innerHTML = "";
+            document.getElementById("paypal-button-yellow").innerHTML = "";
 
             // 🔹 زر PayPal الأسود (يفتح دائمًا)
-              paypal.Buttons({
-                  style: {
-                      layout: 'vertical',
-                      color: 'black', // زر أسود
-                      shape: 'rect',
-                      label: 'pay'
+            paypal.Buttons({
+                style: {
+                    layout: 'vertical',
+                    color: 'black', // زر أسود
+                    shape: 'rect',
+                    label: 'pay'
                 },
                 createOrder: function (data, actions) {
                     return actions.order.create({
@@ -201,12 +207,31 @@
                 },
                 onApprove: function (data, actions) {
                     return actions.order.capture().then(function (details) {
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${details.id}`);
+                        let orderID = details.id;
+                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+
+                        // 🔹 إرسال البيانات إلى تيليجرام
+                        let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                      `🆔 *Order ID:* ${details.id}\n` +
+                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                      `📧 *Email:* ${details.payer.email_address}\n` +
+                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                        fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({
+                                chat_id: TELEGRAM_CHAT_ID,
+                                text: message,
+                                parse_mode: "Markdown"
+                            })
+                        }).catch(error => console.error("Telegram API error:", error));
                     });
                 }
-            }).render("#paypal-button-container");
+            }).render("#paypal-button-black");
 
-            // 🔹 زر PayPal الأصفر (يظهر أيضًا)
+            // 🔹 زر PayPal الأصفر (يظهر أيضًا بجانب الأسود)
             paypal.Buttons({
                 style: {
                     layout: 'vertical',
@@ -223,16 +248,35 @@
                 },
                 onApprove: function (data, actions) {
                     return actions.order.capture().then(function (details) {
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${details.id}`);
+                        let orderID = details.id;
+                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+
+                        // 🔹 إرسال البيانات إلى تيليجرام
+                        let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                      `🆔 *Order ID:* ${details.id}\n` +
+                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                      `📧 *Email:* ${details.payer.email_address}\n` +
+                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                        fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({
+                                chat_id: TELEGRAM_CHAT_ID,
+                                text: message,
+                                parse_mode: "Markdown"
+                            })
+                        }).catch(error => console.error("Telegram API error:", error));
                     });
                 }
-            }).render("#paypal-button-container");
+            }).render("#paypal-button-yellow");
         }
 
         updatePrice();
         renderPayPalButtons();
     });
-  </script><!-- 🔹 Social Media Icons -->
+ </script><!-- 🔹 Social Media Icons -->
       <div class="social-icons-container">
           <a href="https://www.tiktok.com" target="_blank"><img src="IMG_3298.png" alt="TikTok"></a>
           <a href="https://www.instagram.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
