--- a/index.html
+++ b/index.html
@@ -161,122 +161,141 @@
     <!-- 🔹 PayPal SDK -->
     <!-- 🔹 PayPal SDK -->
   <!-- 🔹 تحميل PayPal SDK -->
- <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
+ <!-- 🔹 PayPal Payment Section -->
+<section class="flex justify-center">
+    <div class="bg-white shadow-md rounded-lg p-6 w-96">
+        <h2 class="text-xl font-bold text-gray-700 text-center mb-4">Secure Payment</h2>
 
-<!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal -->
- <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN"; // ✅ استبدل بتوكن البوت الحقيقي
-        const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID"; // ✅ استبدل بمعرف الشات الخاص بك
+        <!-- 🔹 اختيار الكمية -->
+        <label for="quantity" class="block text-gray-700 font-semibold mb-2">Choose Quantity:</label>
+        <select id="quantity" class="border p-2 rounded w-full">
+            <option value="1" selected>1 Piece</option>
+            <option value="2">2 Pieces (Discount!)</option>
+            <option value="3">3 Pieces (More Discount!)</option>
+        </select>
 
-        const basePrice = 1.00;
-        const quantitySelect = document.getElementById("quantity");
-        const totalPriceElement = document.getElementById("total-price");
+        <!-- 🔹 عرض السعر -->
+        <p id="total-price" class="text-lg font-semibold text-gray-700 mt-2">Price: $1.00</p>
 
-        function updatePrice() {
-            const quantity = parseInt(quantitySelect.value);
-            const totalPrice = basePrice * quantity;
-            totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
-            return totalPrice.toFixed(2);
-        }
+        <!-- 🔹 زر PayPal الأسود -->
+        <div id="paypal-button-black" class="mt-4"></div>
 
-        quantitySelect.addEventListener("change", function () {
-            updatePrice();
-            renderPayPalButtons();
-        });
+        <!-- 🔹 زر PayPal الأصفر -->
+        <div id="paypal-button-yellow" class="mt-4"></div>
+    </div>
+</section>
 
-        function renderPayPalButtons() {
-            // ✅ تأكد من إزالة أي أزرار قديمة قبل إعادة الإنشاء
-            document.getElementById("paypal-button-black").innerHTML = "";
-            document.getElementById("paypal-button-yellow").innerHTML = "";
+<!-- 🔹 تحميل PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
 
-            // 🔹 زر PayPal الأسود (يفتح دائمًا)
-            paypal.Buttons({
-                style: {
-                    layout: 'vertical',
-                    color: 'black', // زر أسود
-                    shape: 'rect',
-                    label: 'pay'
-                },
-                createOrder: function (data, actions) {
-                    return actions.order.create({
-                        purchase_units: [{
-                            amount: { value: updatePrice() }
-                        }]
-                    });
-                },
-                onApprove: function (data, actions) {
-                    return actions.order.capture().then(function (details) {
-                        let orderID = details.id;
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN"; // ✅ استبدل بتوكن البوت الحقيقي
+    const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID"; // ✅ استبدل بمعرف الشات الخاص بك
 
-                        // 🔹 إرسال البيانات إلى تيليجرام
-                        let message = `📢 *New Payment Received!* 🚀\n\n` +
-                                      `🆔 *Order ID:* ${details.id}\n` +
-                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
-                                      `📧 *Email:* ${details.payer.email_address}\n` +
-                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
-                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+    const basePrice = 1.00;
+    const quantitySelect = document.getElementById("quantity");
+    const totalPriceElement = document.getElementById("total-price");
 
-                        fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                chat_id: TELEGRAM_CHAT_ID,
-                                text: message,
-                                parse_mode: "Markdown"
-                            })
-                        }).catch(error => console.error("Telegram API error:", error));
-                    });
-                }
-            }).render("#paypal-button-black");
+    function updatePrice() {
+        const quantity = parseInt(quantitySelect.value);
+        const totalPrice = basePrice * quantity;
+        totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
+        return totalPrice.toFixed(2);
+    }
 
-            // 🔹 زر PayPal الأصفر (يظهر أيضًا بجانب الأسود)
-            paypal.Buttons({
-                style: {
-                    layout: 'vertical',
-                    color: 'gold', // زر أصفر
-                    shape: 'rect',
-                    label: 'checkout'
-                },
-                createOrder: function (data, actions) {
-                    return actions.order.create({
-                        purchase_units: [{
-                            amount: { value: updatePrice() }
-                        }]
-                    });
-                },
-                onApprove: function (data, actions) {
-                    return actions.order.capture().then(function (details) {
-                        let orderID = details.id;
-                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
-
-                        // 🔹 إرسال البيانات إلى تيليجرام
-                        let message = `📢 *New Payment Received!* 🚀\n\n` +
-                                      `🆔 *Order ID:* ${details.id}\n` +
-                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
-                                      `📧 *Email:* ${details.payer.email_address}\n` +
-                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
-                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
-
-                        fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
-                            method: "POST",
-                            headers: { "Content-Type": "application/json" },
-                            body: JSON.stringify({
-                                chat_id: TELEGRAM_CHAT_ID,
-                                text: message,
-                                parse_mode: "Markdown"
-                            })
-                        }).catch(error => console.error("Telegram API error:", error));
-                    });
-                }
-            }).render("#paypal-button-yellow");
-        }
-
+    quantitySelect.addEventListener("change", function () {
         updatePrice();
         renderPayPalButtons();
     });
- </script><!-- 🔹 Social Media Icons -->
+
+    function renderPayPalButtons() {
+        document.getElementById("paypal-button-black").innerHTML = "";
+        document.getElementById("paypal-button-yellow").innerHTML = "";
+
+        // 🔹 زر PayPal الأسود (مفتوح دائمًا)
+        paypal.Buttons({
+            style: {
+                layout: 'vertical',
+                color: 'black',
+                shape: 'rect',
+                label: 'pay'
+            },
+            createOrder: function (data, actions) {
+                return actions.order.create({
+                    purchase_units: [{ amount: { value: updatePrice() } }]
+                });
+            },
+            onApprove: function (data, actions) {
+                return actions.order.capture().then(function (details) {
+                    let orderID = details.id;
+                    alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+
+                    // 🔹 إرسال البيانات إلى تيليجرام
+                    let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                  `🆔 *Order ID:* ${details.id}\n` +
+                                  `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                  `📧 *Email:* ${details.payer.email_address}\n` +
+                                  `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                  `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                    fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify({
+                            chat_id: TELEGRAM_CHAT_ID,
+                            text: message,
+                            parse_mode: "Markdown"
+                        })
+                    }).catch(error => console.error("Telegram API error:", error));
+                });
+            }
+        }).render("#paypal-button-black");
+
+        // 🔹 زر PayPal الأصفر
+        paypal.Buttons({
+            style: {
+                layout: 'vertical',
+                color: 'gold',
+                shape: 'rect',
+                label: 'checkout'
+            },
+            createOrder: function (data, actions) {
+                return actions.order.create({
+                    purchase_units: [{ amount: { value: updatePrice() } }]
+                });
+            },
+            onApprove: function (data, actions) {
+                return actions.order.capture().then(function (details) {
+                    let orderID = details.id;
+                    alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+
+                    // 🔹 إرسال البيانات إلى تيليجرام
+                    let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                  `🆔 *Order ID:* ${details.id}\n` +
+                                  `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                  `📧 *Email:* ${details.payer.email_address}\n` +
+                                  `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                  `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                    fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify({
+                            chat_id: TELEGRAM_CHAT_ID,
+                            text: message,
+                            parse_mode: "Markdown"
+                        })
+                    }).catch(error => console.error("Telegram API error:", error));
+                });
+            }
+        }).render("#paypal-button-yellow");
+    }
+
+    updatePrice();
+    renderPayPalButtons();
+});
+</script><!-- 🔹 Social Media Icons -->
       <div class="social-icons-container">
           <a href="https://www.tiktok.com" target="_blank"><img src="IMG_3298.png" alt="TikTok"></a>
           <a href="https://www.instagram.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
