--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <!-- 🔹 زر PayPal الأسود -->
         <div id="paypal-button-black" class="mt-4"></div>
 
-        <!-- 🔹 زر PayPal الأصفر -->
+        <!-- 🔹 زر PayPal الأصفرh -->
         <div id="paypal-button-yellow" class="mt-4"></div>
     </div>
 </section>
