--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
         updatePrice();
         renderPayPalButton();
     });
- </script><!-- 🔹 Social Media Icons -->
+ </script>
+         <!-- 🔹 Social Media Icons -->
+    <script src="script.js"></script>
 </body>
 </html>
