--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <a href="index.html" class="logo">
                 <img src="IMG_3412.png" alt="Velyora Logo" style="height: 40px;">
             </a>
-            <a href="index.html" class="logo">Velyora</a>
+            <a class="navbar-brand text-white" href="#">Velyora</a>
+            <button class="navbar-toggler border-white" type="button">
+            <span class="navbar-toggler-icon"></span>
+            </button>
         
 
         <!-- 🔹 Navigation Links -->
