--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
         <p id="trackingResult" class="mt-2 text-red-500"></p>
 
         <!-- 🔹 Moved "Shipping Info" Button Here -->
-        <a href="shipping.html" class="custom-shipping-button">
-            <img src="IMG_3413.jpeg" alt="Shipping Info">
-        </a>
+        <div class="shipping-info-container">
+            <a href="shipping.html">
+              <img src="shipping-info-image.png" alt="Shipping Info">
+            </a>
+        </div>
     </section>
          <div class="custom-payment-methods">
            <div class="custom-payment-item">
