--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               
            </div>
            <div class="custom-payment-item">
-               <img src="images/IMG_3409.png" alt="USDT (Tether)">
+               <img src="IMG_3413.jpeg" alt="USDT (Tether)">
                
            </div>
        </div>
