--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- 🔹 Moved "Shipping Info" Button Here -->
         <div class="shipping-info-container">
             <a href="shipping.html">
-              <img src="shipping-info-image.png" alt="Shipping Info">
+              <img src="IMG_3413.jpeg" alt="Shipping Info">
             </a>
         </div>
     </section>
