--- a/index.html
+++ b/index.html
@@ -40,12 +40,24 @@
         </div>
 
     <!-- 🔹 Mobile Navigation Menu -->
-        <div class="mobile-nav">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="shopping.html" class="nav-link">Shop</a>
-            <a href="#tracking-section" class="nav-link track-link">Track Order</a>
-            <a href="after-purchase.html" class="nav-link">After Purchase</a>
-        </div>
+        <button class="menu-toggle">
+            <span class="menu-icon">&#9776;</span>
+        </button>
+
+        <div class="sidebar">
+            <ul class="menu-items">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shopping.html">Shop</a></li>
+                <li><a href="#tracking-section">Track Order</a></li>
+                <li><a href="after-purchase.html">After Purchase</a></li>
+            </ul>
+            <hr class="menu-divider">
+            <ul class="menu-extra">
+                <li><a href="return-policy.html">Return Policy</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+            </ul>
+          </div>
     </nav>
       
       
