--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="index.html" class="logo">
                 <img src="IMG_3412.png" alt="Velyora Logo" style="height: 40px;">
             </a>
-            <a class="navbar-brand text-white" href="#">VELYORA</a>
+            <a class="navbar-brand text-white" href="#">VELYAORA</a>
             <button class="navbar-toggler border-white" type="button">
             <span class="navbar-toggler-icon"></span>
             </button>
