--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button class="close-menu">✖</button>
             <ul class="menu-items">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="shipping.html">Shop</a></li>
+                <li><a href="images/shipping.html">Shop</a></li>
                 <li><a href="#tracking-section">Track Order</a></li>
                 <li><a href="after-purchase.html">After Purchase</a></li>
             </ul>
