--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
     <!-- 🔹 Order Tracking & Shipping Info -->
     <section class="tracking-section text-center py-6">
+        <section id="tracking-section" class="tracking-section text-center py-6">
         <h2 class="text-2xl font-bold text-gray-900">📦 Track Your Order</h2>
         <p class="text-gray-600">Enter your tracking number to check your delivery status.</p>
         <div class="mt-4">
